# actix-yew-template

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  index.html  sw.js
app/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
