[package]
name = "my-web-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"

[workspace]
members = ["server", "app"]
default-members = ["server"]
