[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version ="0.18", features = ["cbor"]}
my-web-app = {path=".."}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.44"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
wasm-logger = "0.2"
